# self-prism

./: .gitignore  .tool-versions  Makefile  README.md  pyproject.toml  server.py  tampermonkey.js
chrome/: background-script.js  content-logger.js  manifest.json
firefox/: background-script.js  content-logger.js  manifest.json
scripts/: migrate.py
src/: app.py  db.py  embeddings.py  handlers.py  search.py  visits.py
src/templates/: archive.html.jinja2  search.html.jinja2
src/tests/: test_db.py
